<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@mipmap/logopasangbaliho"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@id/layout_edit_email"
        app:layout_constraintStart_toStartOf="@id/layout_edit_email"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
        android:contentDescription="@string/image_aplikasi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
        app:layout_constraintStart_toStartOf="@id/layout_edit_email"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_label"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_password"
        app:layout_constraintStart_toStartOf="@id/layout_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_edit_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/sign_up_label"
        app:layout_constraintEnd_toEndOf="@id/button_sign_in"
        app:layout_constraintStart_toStartOf="@id/button_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <TextView
        android:id="@+id/textview_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
        app:layout_constraintStart_toStartOf="@id/button_sign_up"
        app:layout_constraintEnd_toEndOf="@id/button_sign_up"
        android:text="@string/or"
        android:gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up_google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in_google_label"
        app:layout_constraintEnd_toEndOf="@id/textview_or"
        app:layout_constraintStart_toStartOf="@id/textview_or"
        app:layout_constraintTop_toBottomOf="@+id/textview_or" />
</androidx.constraintlayout.widget.ConstraintLayout>