<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.genossys.pasangbaliho.ui.sign_in.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/image_aplikasi"
            android:src="@mipmap/logopasangbaliho"
            app:layout_constraintBottom_toTopOf="@id/layout_edit_email"
            app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
            app:layout_constraintStart_toStartOf="@id/layout_edit_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:text="@={viewmodel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
            app:layout_constraintStart_toStartOf="@id/layout_edit_email"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.password}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:onClick="@{viewmodel.onLoginButtonClick}"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in_label"
            app:layout_constraintEnd_toEndOf="@id/layout_edit_password"
            app:layout_constraintStart_toStartOf="@id/layout_edit_password"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/sign_up_label"
            app:layout_constraintEnd_toEndOf="@id/button_sign_in"
            app:layout_constraintStart_toStartOf="@id/button_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

        <TextView
            android:id="@+id/textview_or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="@id/button_sign_up"
            app:layout_constraintStart_toStartOf="@id/button_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in_google"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sign_in_google_label"
            app:layout_constraintEnd_toEndOf="@id/textview_or"
            app:layout_constraintStart_toStartOf="@id/textview_or"
            app:layout_constraintTop_toBottomOf="@+id/textview_or" />


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>