<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_menu_utama"
        android:background="@color/frontdrop"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/margin_default_menu_utama"
            android:paddingEnd="@dimen/margin_default_menu_utama"
            android:src="@drawable/ic_chevron_left_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:maxLines="1"
            android:text="Sign Up"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/text_judul"
            app:layout_constraintBottom_toBottomOf="@+id/button_back"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="@+id/button_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default_menu_utama">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_menu_utama_besar"
                android:hint="@string/email_hint"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_hint"
                app:boxBackgroundColor="@color/frontdrop"
                app:counterMaxLength="191"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_email"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_nama_instansi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_instansi_hint"
                app:boxBackgroundColor="@color/frontdrop"
                app:counterMaxLength="191"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_nama"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_nama_instansi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_telp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_phone"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_nama_instansi"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_alamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_alamat"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_telp"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password_hint"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_alamat"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_conf_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/konfirmasi_password_hint"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_password"
                app:layout_constraintVertical_bias="0.39">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_conf_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frontdrop"
        android:padding="@dimen/margin_default_menu_utama"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simpan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress_loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_refresh_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>